--- a/PostMaster.csproj
+++ b/PostMaster.csproj
@@ -2,20 +2,21 @@
 
 	<PropertyGroup>
 		<Configurations>Debug;Release</Configurations>
-		<Version>1.0.2</Version>
-
-		<!--The folder where Game.dll is located. Set it only if the game is not installed in the default location, otherwise keep it empty-->
-		<CustomManagedPath></CustomManagedPath>
-
-  <!-- Single source of truth -->
-	  <Version>1.0.1</Version>
-	<AssemblyVersion>$(Version).0</AssemblyVersion>
-	<FileVersion>$(Version).0</FileVersion>  <!-- for file properties -->
-
-		<Nullable>enable</Nullable>
 
 		<!--The file where mod information which is required for publishing mod on PDX mods are stored-->
 		<PublishConfigurationPath>Properties\PublishConfiguration.xml</PublishConfigurationPath>
+
+		<!--The folder where Game.dll is located. Set it only if the game is not installed in the default location, otherwise keep it empty-->
+		<CustomManagedPath></CustomManagedPath>
+		<RootNamespace>PostMaster</RootNamespace>
+		<Nullable>enable</Nullable>
+
+  <!-- Single source of truth -->
+	  <Version>1.0.2</Version>
+	<AssemblyVersion>$(Version).0</AssemblyVersion>
+	<FileVersion>$(Version).0</FileVersion>  <!-- for file properties -->
+
+
 	</PropertyGroup>
 	
 	<!--Imports must be after PropertyGroup block-->
