--- a/MagicMail.csproj
+++ b/MagicMail.csproj
@@ -8,7 +8,7 @@
 
 		<!--The folder where Game.dll is located. Set it only if the game is not installed in the default location, otherwise keep it empty-->
 		<CustomManagedPath></CustomManagedPath>
-		<RootNamespace>PostMaster</RootNamespace>
+		<RootNamespace>MagicMail</RootNamespace>
 		<Nullable>enable</Nullable>
 
   <!-- Single source of truth -->
